[gd_scene load_steps=22 format=3 uid="uid://6kxb115r88ja"]

[ext_resource type="Script" path="res://scripts/SwordBot.gd" id="1_j1shg"]
[ext_resource type="Texture2D" uid="uid://c1c25pv6egknq" path="res://art/characters/walk_anim/walk.png" id="2_3frak"]
[ext_resource type="Texture2D" uid="uid://ddsmks587q1w5" path="res://art/characters/charcter_body_white.png" id="2_rf51t"]
[ext_resource type="Texture2D" uid="uid://33r4lw5scs7x" path="res://art/characters/charcter_head_White.png" id="4_3v4jg"]
[ext_resource type="Texture2D" uid="uid://dfu15x5roe4d8" path="res://art/weappon/sowrd.png" id="4_yxemg"]
[ext_resource type="StyleBox" uid="uid://c4upgwwnnxkkj" path="res://art/Resources/progres_bar_fill.tres" id="6_8w0fe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fklgc"]
radius = 43.0
height = 172.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gpydr"]
atlas = ExtResource("2_3frak")
region = Rect2(800, 2400, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_38rgn"]
atlas = ExtResource("2_3frak")
region = Rect2(0, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_eefjo"]
atlas = ExtResource("2_3frak")
region = Rect2(800, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_645rr"]
atlas = ExtResource("2_3frak")
region = Rect2(1600, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_x46wm"]
atlas = ExtResource("2_3frak")
region = Rect2(2400, 1600, 800, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_6srjn"]
atlas = ExtResource("2_3frak")
region = Rect2(3200, 1600, 800, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_foslu"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpydr")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_38rgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eefjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_645rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x46wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6srjn")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6a7xx"]
size = Vector2(256, 32)

[sub_resource type="Animation" id="Animation_mwvlr"]
resource_name = "Attack"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.39626, 1.39626, -1.39626]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"dmg_enemy"
}, {
"args": [],
"method": &"dmg_enemy"
}]
}

[sub_resource type="Animation" id="Animation_p0cfe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ltfh"]
_data = {
"Attack": SubResource("Animation_mwvlr"),
"RESET": SubResource("Animation_p0cfe")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dv6uo"]
radius = 1500.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yyse6"]
radius = 48.0
height = 172.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqgxw"]
bg_color = Color(0.423529, 0.423529, 0.423529, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 12
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false
anti_aliasing_size = 0.01

[node name="SwordBot" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_j1shg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -18)
shape = SubResource("CapsuleShape2D_fklgc")

[node name="sprites" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(-13, -59)
scale = Vector2(0.53, 0.53)
sprite_frames = SubResource("SpriteFrames_foslu")
animation = &"Idle"
autoplay = "Idle"

[node name="CharcterBody1" type="Sprite2D" parent="sprites"]
scale = Vector2(0.8, 0.966)
texture = ExtResource("2_rf51t")

[node name="CharcterHeadWhite" type="Sprite2D" parent="sprites"]
position = Vector2(7, 9)
texture = ExtResource("4_3v4jg")

[node name="weappon" type="Node2D" parent="."]
rotation = -0.523599

[node name="Node2D" type="Node2D" parent="weappon"]

[node name="sword_sprite" type="Sprite2D" parent="weappon/Node2D"]
position = Vector2(100, -3.8147e-06)
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_yxemg")

[node name="Area2D" type="Area2D" parent="weappon/Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="weappon/Node2D/Area2D"]
position = Vector2(113.067, 0)
shape = SubResource("RectangleShape2D_6a7xx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="weappon"]
libraries = {
"": SubResource("AnimationLibrary_8ltfh")
}
autoplay = "RESET"

[node name="Spoted_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spoted_area"]
visible = false
shape = SubResource("CircleShape2D_dv6uo")

[node name="dmge" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dmge"]
shape = SubResource("CapsuleShape2D_yyse6")

[node name="AvoidRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -80)
target_position = Vector2(200, 0)

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
z_index = 4096
offset_left = -141.0
offset_top = -241.0
offset_right = 157.0
offset_bottom = -206.0
theme_override_styles/background = SubResource("StyleBoxFlat_dqgxw")
theme_override_styles/fill = ExtResource("6_8w0fe")
max_value = 80.0
value = 80.0
metadata/_edit_lock_ = true

[connection signal="body_entered" from="Spoted_area" to="." method="_on_spoted_area_body_entered"]
[connection signal="body_exited" from="Spoted_area" to="." method="_on_spoted_area_body_exited"]
[connection signal="area_entered" from="dmge" to="." method="_on_dmge_area_entered"]
